--- a/CSS/CV.HTML
+++ b/CSS/CV.HTML
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOGADO FEDERICO LERDA</title>
-    <link rel="stylesheet" href="ejemplo.css">
+    <link.rel="stylesheet" href="ESTILO.CSS">
 </head>
 <body>
  <h1>Curriculum Vitae</h1>
